--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,12 @@
 {
-  "name": "Shop Finder PWA",
-  "short_name": "ShopFinder",
+  "name": "Shop Explorer",
+  "short_name": "Shops",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#1e1e1e",
-  "description": "A PWA to find shops from a Google Sheet dataset.",
+  "background_color": "#0b1020",
+  "theme_color": "#3b82f6",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-       "purpose": "any maskable"
-    }
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
